--- a/POKEDEX/assets/css/global.css
+++ b/POKEDEX/assets/css/global.css
@@ -1,6 +1,24 @@
-/*css o que da estilo */ /*html o são as marcações o testo que fica 
-                                         dentro do body*/
 *{
     font-family: 'Roboto', sans-serif;
 }
-      
+
+.content{
+    padding: 1rem;
+}
+
+ol.pokemons{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+ol.pokemons li{
+    margin: .5rem;
+    padding: 1rem;
+    background-color: #14A06F;
+    color: #fff;
+    border-radius: 1rem;
+    height: 100px;
+}
